--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Psychic Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
-    <script src="assets/javascript/game.js"></script>
+    
 </head>
 <body>
 <h1>The Psychic Game</h1>
@@ -18,4 +18,6 @@
 
 
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="assets/javascript/game.js"></script>
 </html>
